--- a/index.jade
+++ b/index.jade
@@ -14,6 +14,8 @@ html(lang="en", ng-app="textfeature")
 		script(type="text/javascript", src="bower_components/angular-mocks/angular-mocks.js")
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
 		script(type="text/javascript", src="bower_components/ng-contentful/ng-contentful.js")
+		script(type="text/javascript", src="js/showdown.js")
 		script(type="text/javascript", src="js/app.js")
 		script(type="text/javascript", src="js/controllers.js")
-		//- script(type="text/javascript", src="js/feature-beast.js")
+		script(type="text/javascript", src="js/directives.js")
+		script(type="text/javascript", src="js/feature-beast.js")
