--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -1,1 +1,34 @@
-p TBD: detail view
+.list-wrapper
+	.rbma-radio-picks
+	h1(class="author") {{list.items[0].fields.author}}
+	//- img(ng-src="{{list.includes.Asset[0].fields.file.url}}")
+
+	ul(class="list-thumbs")
+		li(ng-repeat="img in list.includes.Asset")
+			.thumb-container
+				span(class="order") {{img.fields.description}}
+				a(href)
+					.img-container
+						img(ng-src="{{img.fields.file.url}}")
+
+	p(class="intro") {{list.items[0].fields.body}}
+
+
+	ul(class="list-items")
+		li(class="list-item", ng-repeat="item in list.includes.Entry")
+			.list-container
+				.list-titles
+					span(class="item-order") {{item.fields.order}}
+					h3(class="item-title") {{item.fields.title}}
+				.item-body
+					.item-image-wrapper
+						img(src="https://images.contentful.com/6s2rqhmim2vw/1X6aOpRY4Yk2CiECM4WQ4S/357349451e66e97d376fb36bb13720dd/recursos_del_tutorial_by_cassi_editions-d79td1t.png")
+					p {{item.fields.body}}
+
+	.sidebar
+		h4(class="radio-picks-sidebar")
+		h4(class="author-sidebar") {{list.items[0].fields.author}}
+		ul(class="sidebar-list")
+			li(class="sidebar-item", ng-repeat="item in list.includes.Entry")
+				a(href class="order") {{item.fields.order}}
+				a(href) {{item.fields.title}}
