--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -10,6 +10,12 @@ html{
 	height: 100%;
 }
 
+[ng-click],
+[data-ng-click],
+[x-ng-click] {
+    cursor: pointer;
+}
+
 body{
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
@@ -48,6 +54,7 @@ body{
 		list-style-type: none;
 		padding: none;
 		text-align: center;
+		z-index: 1;
 		li{
 			display: inline-block;
 			text-align: center;
@@ -77,8 +84,9 @@ body{
 					overflow: hidden;
 					width: 200px;
 					height: 200px;
+					background-color: white;
 					@include vendorize(transform, rotate(-45deg));
-					@include vendorize(transition, all .2s ease-in-out);
+					@include vendorize(transition, all .1s cubic-bezier(.17,.67,.83,.67));
 					z-index: 5;
 					img{
 						height: 100%;
@@ -86,9 +94,11 @@ body{
 					}
 					&:hover{
 						@include vendorize(transform, rotate(0));
-						@include vendorize(transform, scale(1.3));
-						z-index: 0 !important;
+						@include vendorize(transform, scale(1.5));
 					}
+				}
+				&:hover{
+					z-index: 999;
 				}
 			}
 		}
