--- a/partials/detail.html
+++ b/partials/detail.html
@@ -10,7 +10,7 @@
   </ul>
   <p class="intro">{{list.items[0].fields.body}}</p>
   <ul class="list-items">
-    <li ng-repeat="item in list.includes.Entry" class="list-item">
+    <li ng-repeat="item in list.includes.Entry" class="list-item"><a id="{{item.fields.order}}"></a>
       <div class="list-container">
         <div class="list-titles"><span class="item-order">{{item.fields.order}}</span>
           <h3 class="item-title">{{item.fields.title}}</h3>
@@ -26,7 +26,7 @@
     <h4 class="radio-picks-sidebar"></h4>
     <h4 class="author-sidebar">{{list.items[0].fields.author}}</h4>
     <ul class="sidebar-list">
-      <li ng-repeat="item in list.includes.Entry" class="sidebar-item"><a href="href" class="order">{{item.fields.order}}</a><a href="href">{{item.fields.title}}</a></li>
+      <li ng-repeat="item in list.includes.Entry" class="sidebar-item"><a ng-click="gotoBottom()" class="order">{{item.fields.order}}</a><a ng-click="gotoBottom()">{{item.fields.title}}</a></li>
     </ul>
-  </div>
+  </div><a id="bottom"></a>
 </div>
