--- a/index.jade
+++ b/index.jade
@@ -10,6 +10,7 @@ html(lang="en", ng-app="textfeature")
 
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js")
+		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-sanitize.js")
 		script(type="text/javascript", src="bower_components/angular-route/angular-route.min.js")
 		script(type="text/javascript", src="js/contentful.min.js")
 		script(type="text/javascript", src="bower_components/angular-mocks/angular-mocks.js")
