--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -41,6 +41,26 @@ body {
   font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px; }
 
+.lists {
+  list-style-type: none;
+  text-align: center; }
+  .lists li {
+    display: inline; }
+    .lists li a {
+      color: black;
+      text-decoration: underline; }
+      .lists li a .list-list-wrapper {
+        width: 30%;
+        position: relative;
+        border: 4px solid black; }
+        .lists li a .list-list-wrapper .list-list-image-wrapper {
+          width: 100%;
+          height: 100%;
+          overflow: hidden; }
+          .lists li a .list-list-wrapper .list-list-image-wrapper img {
+            max-width: 100%;
+            height: auto; }
+
 .list-wrapper {
   position: relative;
   margin-top: 50px;
