--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -30,6 +30,33 @@ body{
 	font-size: 16px;
 }
 
+.lists{
+	list-style-type: none;
+	text-align: center;
+	li{
+		display: inline;
+		a{
+		color: black;
+		text-decoration: underline;
+		.list-list-wrapper{
+			width: 30%;
+			position: relative;
+			border: 4px solid black;
+			.list-list-image-wrapper{
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+				img{
+					max-width: 100%;
+					height: auto;
+				}
+			}
+		}
+	}
+
+	}
+}
+
 .list-wrapper{
 	position: relative;
 	margin-top: 50px;
