--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -1,21 +1,21 @@
 .list-wrapper
 	.rbma-radio-picks
-	h1(class="author") {{list.items[0].fields.author}}
+	h1(class="author") {{list.fields.author}}
 	//- img(ng-src="{{list.includes.Asset[0].fields.file.url}}")
 
 	ul(class="list-thumbs")
-		li(ng-repeat="img in list.includes.Asset")
+		li(ng-repeat="entry in list.fields.individualListItems")
 			.thumb-container
-				span(class="order") {{img.fields.description}}
+				span(class="order") {{entry.fields.order}}
 				a(href)
 					.img-container
-						img(ng-src="{{img.fields.file.url}}")
+						img(ng-src="{{entry.fields.image.fields.file.url}}")
 
-	p(class="intro", ng-bind-html="trust(list.items[0].fields.body)")
+	p(class="intro", ng-bind-html="trust(list.entry[0].fields.body)")
 
 
 	ul(class="list-items")
-		li(class="list-item", ng-repeat="item in list.includes.Entry")
+		li(class="list-item", ng-repeat="item in list.fields.individualListItems")
 			a(id="{{item.fields.order}}")
 			.list-container
 				.list-titles
@@ -23,14 +23,14 @@
 					h3(class="item-title") {{item.fields.title}}
 				.item-body
 					.item-image-wrapper
-						img(src="https://images.contentful.com/6s2rqhmim2vw/1X6aOpRY4Yk2CiECM4WQ4S/357349451e66e97d376fb36bb13720dd/recursos_del_tutorial_by_cassi_editions-d79td1t.png")
+						img(ng-src="{{item.fields.image.fields.file.url}}")
 					p(ng-bind-html="trust(item.fields.body)")
 
 	.sidebar
 		h4(class="radio-picks-sidebar")
-		h4(class="author-sidebar") {{list.items[0].fields.author}}
+		h4(class="author-sidebar") {{list.fields.author}}
 		ul(class="sidebar-list")
-			li(class="sidebar-item", ng-repeat="item in list.includes.Entry")
+			li(class="sidebar-item", ng-repeat="item in list.fields.individualListItems")
 				a(ng-click="gotoBottom()", class="order") {{item.fields.order}}
 				a(ng-click="gotoBottom()") {{item.fields.title}}
 
