--- a/index.jade
+++ b/index.jade
@@ -9,12 +9,15 @@ html(lang="en", ng-app="textfeature")
 		div(ng-view)
 
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
+		script(type="text/javascript", src="js/waypoints.min.js")
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js")
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-sanitize.js")
 		script(type="text/javascript", src="bower_components/angular-route/angular-route.min.js")
+		script(type="text/javascript", src="bower_components/angular-ui-utils/ui-utils.min.js")
 		script(type="text/javascript", src="js/contentful.min.js")
 		script(type="text/javascript", src="bower_components/ng-contentful/ng-contentful.js")
 		script(type="text/javascript", src="bower_components/angular-mocks/angular-mocks.js")
+		script(type="text/javascript", src="bower_components/angular-scroll/angular-scroll.min.js")
 		script(type="text/javascript", src="js/showdown.js")
 		script(type="text/javascript", src="js/app.js")
 		script(type="text/javascript", src="js/controllers.js")
