--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -1,4 +1,4 @@
-.list-wrapper
+.list-wrapper(id="top")
 	.rbma-radio-picks
 	h1(class="author") {{list.fields.author}}
 	//- img(ng-src="{{list.includes.Asset[0].fields.file.url}}")
@@ -7,7 +7,7 @@
 		li(ng-repeat="entry in list.fields.individualListItems")
 			.thumb-container
 				span(class="order") {{entry.fields.order}}
-				a(href)
+				a(ng-click="smoothScroll(entry.fields.anchorLinkTag)")
 					.img-container
 						img(ng-src="{{entry.fields.image.fields.file.url}}")
 
@@ -16,7 +16,7 @@
 
 	ul(class="list-items")
 		li(class="list-item", ng-repeat="item in list.fields.individualListItems")
-			a(id="{{item.fields.order}}")
+			a(id="{{item.fields.anchorLinkTag}}")
 			.list-container
 				.list-titles
 					span(class="item-order") {{item.fields.order}}
@@ -27,11 +27,13 @@
 					p(ng-bind-html="trust(item.fields.body)")
 
 	.sidebar
-		h4(class="radio-picks-sidebar")
-		h4(class="author-sidebar") {{list.fields.author}}
+		a(ng-click="smoothScroll('top')")
+			img(ng-src="{{list.fields.authorImage.fields.file.url}}")
+			h4(class="radio-picks-sidebar")
+			h4(class="author-sidebar") {{list.fields.author}}
 		ul(class="sidebar-list")
 			li(class="sidebar-item", ng-repeat="item in list.fields.individualListItems")
-				a(ng-click="gotoBottom()", class="order") {{item.fields.order}}
-				a(ng-click="gotoBottom()") {{item.fields.title}}
+				a(class="{{item.fields.anchorLinkTag}} order", ng-click="smoothScroll(item.fields.anchorLinkTag)") {{item.fields.order}}
+				a(ng-click="smoothScroll(item.fields.anchorLinkTag)") {{item.fields.title}}
 
 	a(id="bottom")
