--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -13,7 +13,7 @@ html{
 [ng-click],
 [data-ng-click],
 [x-ng-click] {
-    cursor: pointer;
+    cursor: pointer !important;
 }
 
 body{
@@ -82,12 +82,13 @@ body{
 		padding: none;
 		text-align: center;
 		z-index: 1;
+		margin-top: 68px;
 		li{
 			display: inline-block;
 			text-align: center;
 			.thumb-container{
 				position: relative;
-				margin-top: 68px;
+				margin-top: -8px;
 				text-align: center;
 				width: 200px;
 				height: 300px;
@@ -111,6 +112,7 @@ body{
 					overflow: hidden;
 					width: 200px;
 					height: 200px;
+					text-align: center;
 					background-color: white;
 					@include vendorize(transform, rotate(-45deg));
 					@include vendorize(transition, all .1s cubic-bezier(.17,.67,.83,.67));
@@ -178,6 +180,7 @@ body{
 						height: 400px;
 						overflow: hidden;
 						border: 4px solid black;
+						text-align: center;
 					}
 					img{
 						height: 100%;
@@ -194,10 +197,14 @@ body{
 	.sidebar{
 		position: fixed;
 		top: 40%;
-		left: 0;
+		left: 20px;
 		width: 33.3333333333%;
 		h4{
 			margin: 0;
+		}
+		img{
+			max-width: 40%;
+			height: auto;
 		}
 		.radio-picks-sidebar{
 			margin-left: 20px;
