--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,16 +1,16 @@
 
-<div class="list-wrapper">
+<div id="top" class="list-wrapper">
   <div class="rbma-radio-picks"></div>
   <h1 class="author">{{list.fields.author}}</h1>
   <ul class="list-thumbs">
     <li ng-repeat="entry in list.fields.individualListItems">
-      <div class="thumb-container"><span class="order">{{entry.fields.order}}</span><a href="href">
+      <div class="thumb-container"><span class="order">{{entry.fields.order}}</span><a ng-click="smoothScroll(entry.fields.anchorLinkTag)">
           <div class="img-container"><img ng-src="{{entry.fields.image.fields.file.url}}"/></div></a></div>
     </li>
   </ul>
   <p ng-bind-html="trust(list.entry[0].fields.body)" class="intro"></p>
   <ul class="list-items">
-    <li ng-repeat="item in list.fields.individualListItems" class="list-item"><a id="{{item.fields.order}}"></a>
+    <li ng-repeat="item in list.fields.individualListItems" class="list-item"><a id="{{item.fields.anchorLinkTag}}"></a>
       <div class="list-container">
         <div class="list-titles"><span class="item-order">{{item.fields.order}}</span>
           <h3 class="item-title">{{item.fields.title}}</h3>
@@ -22,11 +22,11 @@
       </div>
     </li>
   </ul>
-  <div class="sidebar">
-    <h4 class="radio-picks-sidebar"></h4>
-    <h4 class="author-sidebar">{{list.fields.author}}</h4>
+  <div class="sidebar"><a ng-click="smoothScroll('top')"><img ng-src="{{list.fields.authorImage.fields.file.url}}"/>
+      <h4 class="radio-picks-sidebar"></h4>
+      <h4 class="author-sidebar">{{list.fields.author}}</h4></a>
     <ul class="sidebar-list">
-      <li ng-repeat="item in list.fields.individualListItems" class="sidebar-item"><a ng-click="gotoBottom()" class="order">{{item.fields.order}}</a><a ng-click="gotoBottom()">{{item.fields.title}}</a></li>
+      <li ng-repeat="item in list.fields.individualListItems" class="sidebar-item"><a ng-click="smoothScroll(item.fields.anchorLinkTag)" class="{{item.fields.anchorLinkTag}} order">{{item.fields.order}}</a><a ng-click="smoothScroll(item.fields.anchorLinkTag)">{{item.fields.title}}</a></li>
     </ul>
   </div><a id="bottom"></a>
 </div>
