--- a/partials/detail.html
+++ b/partials/detail.html
@@ -16,7 +16,7 @@
           <h3 class="item-title">{{item.fields.title}}</h3>
         </div>
         <div class="item-body">
-          <div class="item-image-wrapper"><img ng-src="{{item.fields.image.fields.file.url}}"/></div>
+          <div ng-show="{{item.fields.embedAsImage}}" class="item-image-wrapper"><img ng-src="{{item.fields.image.fields.file.url}}"/></div>
           <p ng-bind-html="trust(item.fields.body)"></p>
         </div>
       </div>
