--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -188,11 +188,20 @@ body{
 					}
 					p{
 						text-align: left;
-						iframe{
-							margin: 0;
+						.video{
+							position: relative;
+							padding-bottom: 56.25%;
+							padding-top: 30px;
+							height: 0;
+							overflow: hidden;
 							margin-bottom: 50px;
-							display: block;
-
+							iframe, object, embed{
+								position: absolute;
+								top: 0;
+								left: 0;
+								width: 100%;
+								height: 100%;
+							}
 						}
 					}
 				}
@@ -254,5 +263,52 @@ body{
 			}
 		}
 	}
+}
+
+@media screen and (max-width: 600px){
+
+	.list-wrapper{
+		width: 90%;
+		margin-left: 5%;
+		ul.list-items{
+			width: 100%;
+			margin-left: 0;
+			.list-item{
+				.list-container{
+					.item-titles{
+
+					}
+					.item-body{
+						.item-image-wrapper{
+							max-width: 98%;
+							margin-left: 1%;
+							border: none;
+							img{
+								height: contain;
+							}
+						}
+						p{
+							font-size: 0.8em;
+						}
+
+					}
+				}
+			}
+		}
+	}
+	.sidebar{
+		display: none;
+	}
+
+	.list-thumbs{
+		display: none;
+	}
+
+	.intro{
+		width: 100%;
+		margin-left: 0;
+	}
+
+	
 }
 
