--- a/partials/detail.html
+++ b/partials/detail.html
@@ -25,8 +25,10 @@
   <div class="sidebar"><a ng-click="smoothScroll('top')"><img ng-src="{{list.fields.authorImage.fields.file.url}}"/>
       <h4 class="radio-picks-sidebar"></h4>
       <h4 class="author-sidebar">{{list.fields.author}}</h4></a>
-    <ul class="sidebar-list">
-      <li ng-repeat="item in list.fields.individualListItems" class="sidebar-item"><a ng-click="smoothScroll(item.fields.anchorLinkTag)" class="{{item.fields.anchorLinkTag}} order">{{item.fields.order}}</a><a ng-click="smoothScroll(item.fields.anchorLinkTag)">{{item.fields.title}}</a></li>
-    </ul>
+    <ul class="sidebar-list"><a ng-click="smoothScroll(item.fields.anchorLinkTag)" class="{{item.fields.anchorLinkTag}} order">
+        <li ng-repeat="item in list.fields.individualListItems" class="sidebar-item">
+          {{item.fields.order}}
+          {{item.fields.title}}
+        </li></a></ul>
   </div><a id="bottom"></a>
 </div>
