--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -64,8 +64,8 @@ body {
 .list-wrapper {
   position: relative;
   margin-top: 50px;
-  margin: 50px 10% auto 10%;
-  width: 80%;
+  margin: 50px 0 auto 10%;
+  width: 90%;
   overflow: hidden;
   height: 100%; }
   .list-wrapper .rbma-radio-picks {
@@ -80,12 +80,14 @@ body {
   .list-wrapper .list-thumbs {
     list-style-type: none;
     padding: none;
+    padding-right: 100px;
     text-align: center;
     z-index: 1;
     margin-top: 68px; }
     .list-wrapper .list-thumbs li {
       display: inline-block;
-      text-align: center; }
+      text-align: center;
+      margin-bottom: -100px; }
       .list-wrapper .list-thumbs li .thumb-container {
         position: relative;
         margin-top: -8px;
@@ -93,27 +95,6 @@ body {
         width: 200px;
         height: 300px;
         z-index: 1; }
-        .list-wrapper .list-thumbs li .thumb-container span {
-          position: absolute;
-          text-align: center;
-          -webkit-border-radius: 50%;
-          -moz-border-radius: 50%;
-          -ms-border-radius: 50%;
-          -o-border-radius: 50%;
-          border-radius: 50%;
-          bottom: 10px;
-          left: 50%;
-          font-size: 0.5em;
-          font-weight: bold;
-          -webkit-transform: rotate(-45deg);
-          -moz-transform: rotate(-45deg);
-          -ms-transform: rotate(-45deg);
-          -o-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-          border: 2px solid black;
-          width: 15px;
-          height: 15px;
-          line-height: 15px; }
         .list-wrapper .list-thumbs li .thumb-container .img-container {
           border: 5px solid black;
           overflow: hidden;
@@ -132,6 +113,24 @@ body {
           -o-transition: all 0.1s cubic-bezier(0.17, 0.67, 0.83, 0.67);
           transition: all 0.1s cubic-bezier(0.17, 0.67, 0.83, 0.67);
           z-index: 5; }
+          .list-wrapper .list-thumbs li .thumb-container .img-container span {
+            z-index: 9999999999999;
+            position: absolute;
+            text-align: center;
+            background-color: white;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            border-radius: 50%;
+            top: 10px;
+            right: 10px;
+            font-size: 0.5em;
+            font-weight: bold;
+            border: 2px solid black;
+            width: 15px;
+            height: 15px;
+            line-height: 15px; }
           .list-wrapper .list-thumbs li .thumb-container .img-container img {
             height: 100%;
             width: auto; }
@@ -155,7 +154,7 @@ body {
     line-height: 1.5; }
   .list-wrapper .list-items {
     width: 66.6666666666%;
-    margin-left: 33.33333333333%;
+    margin-left: 15.33333333333%;
     font-size: 1.7em;
     line-height: 1.5;
     list-style-type: none;
@@ -233,16 +232,18 @@ body {
       list-style-type: none;
       padding: 0;
       margin-left: 20px; }
-      .list-wrapper .sidebar .sidebar-list .sidebar-item {
-        margin-bottom: 10px;
-        background-color: transparent;
-        color: black !important; }
-        .list-wrapper .sidebar .sidebar-list .sidebar-item a {
-          display: inline-block;
-          margin: 5px;
-          text-decoration: none; }
-          .list-wrapper .sidebar .sidebar-list .sidebar-item a.order {
+      .list-wrapper .sidebar .sidebar-list a {
+        margin: 5px;
+        text-decoration: none; }
+        .list-wrapper .sidebar .sidebar-list a .sidebar-item {
+          padding: 5px;
+          margin: 0;
+          background-color: transparent;
+          color: black !important; }
+          .list-wrapper .sidebar .sidebar-list a .sidebar-item .order {
             width: 15px;
+            display: inline-block;
+            margin-right: 5px;
             text-align: center;
             line-height: 15px;
             height: 15px;
@@ -252,11 +253,18 @@ body {
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
             border-radius: 50%; }
-        .list-wrapper .sidebar .sidebar-list .sidebar-item:hover {
-          background-color: black;
-          color: white !important; }
-          .list-wrapper .sidebar .sidebar-list .sidebar-item:hover .order {
-            border: 2px solid white !important; }
+          .list-wrapper .sidebar .sidebar-list a .sidebar-item:hover {
+            background-color: black;
+            color: white !important; }
+            .list-wrapper .sidebar .sidebar-list a .sidebar-item:hover .order {
+              border: 2px solid white !important; }
+          .list-wrapper .sidebar .sidebar-list a .sidebar-item.active {
+            background-color: black;
+            color: white !important; }
+            .list-wrapper .sidebar .sidebar-list a .sidebar-item.active .order {
+              border: 2px solid white !important; }
+        .list-wrapper .sidebar .sidebar-list a.active {
+          color: blue; }
 
 @media screen and (max-width: 600px) {
   .list-wrapper {
