--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -60,8 +60,8 @@ body{
 .list-wrapper{
 	position: relative;
 	margin-top: 50px;
-	margin: 50px 10% auto 10%;
-	width: 80%;
+	margin: 50px 0 auto 10%;
+	width: 90%;
 	overflow: hidden;
 	height: 100%;
 	.rbma-radio-picks{
@@ -80,12 +80,14 @@ body{
 	.list-thumbs{
 		list-style-type: none;
 		padding: none;
+		padding-right: 100px;
 		text-align: center;
 		z-index: 1;
 		margin-top: 68px;
 		li{
 			display: inline-block;
 			text-align: center;
+			margin-bottom: -100px;
 			.thumb-container{
 				position: relative;
 				margin-top: -8px;
@@ -93,20 +95,7 @@ body{
 				width: 200px;
 				height: 300px;
 				z-index: 1;
-				span{
-					position: absolute;
-					text-align: center;
-					@include vendorize(border-radius, 50%);
-					bottom: 10px;
-					left: 50%;
-					font-size: 0.5em;
-					font-weight: bold;
-					@include vendorize(transform, rotate(-45deg));
-					border: 2px solid black;
-					width: 15px;
-					height: 15px;
-					line-height: 15px;
-				}
+
 				.img-container{
 					border: 5px solid black;
 					overflow: hidden;
@@ -117,6 +106,21 @@ body{
 					@include vendorize(transform, rotate(-45deg));
 					@include vendorize(transition, all .1s cubic-bezier(.17,.67,.83,.67));
 					z-index: 5;
+					span{
+						z-index: 9999999999999;
+						position: absolute;
+						text-align: center;
+						background-color: white;
+						@include vendorize(border-radius, 50%);
+						top: 10px;
+						right: 10px;
+						font-size: 0.5em;
+						font-weight: bold;
+						border: 2px solid black;
+						width: 15px;
+						height: 15px;
+						line-height: 15px;
+					}
 					img{
 						height: 100%;
 						width: auto;
@@ -142,7 +146,7 @@ body{
 
 	.list-items{
 		width: 66.6666666666%;
-		margin-left: 33.33333333333%;
+		margin-left: 15.33333333333%;
 		font-size: 1.7em;
 		line-height: 1.5;
 		list-style-type: none;
@@ -235,30 +239,41 @@ body{
 			list-style-type: none;
 			padding: 0;
 			margin-left: 20px;
-			
-			.sidebar-item{
-				margin-bottom: 10px;
-				background-color: transparent;
-				color: black !important;
-				a{
-					display: inline-block;
-					margin: 5px;
-					text-decoration: none;
-					&.order{
+			a{
+				margin: 5px;
+				text-decoration: none;
+				.sidebar-item{
+					padding: 5px;
+					margin: 0;
+					background-color: transparent;
+					color: black !important;
+					.order{
 						width: 15px;
+						display: inline-block;
+						margin-right: 5px;
 						text-align: center;
 						line-height: 15px;
 						height: 15px;
 						border: 2px solid black;
 						@include vendorize(border-radius, 50%);
 					}
-				}
-				&:hover{
+					&:hover{
 						background-color: black;
 						color: white !important;
 						.order{
 							border: 2px solid white !important; 
 						}
+					}
+					&.active{
+						background-color: black;
+						color: white !important;
+						.order{
+							border: 2px solid white !important;
+						}
+					}
+				}
+				&.active{
+					color: blue;
 				}
 			}
 		}
