--- a/index.jade
+++ b/index.jade
@@ -19,6 +19,7 @@ html(lang="en", ng-app="listfeature")
 		script(type="text/javascript", src="bower_components/angular-mocks/angular-mocks.js")
 		script(type="text/javascript", src="bower_components/angular-scroll/angular-scroll.min.js")
 		script(type="text/javascript", src="js/showdown.js")
+		script(type="text/javascript", src="js/waypoints.min.js")
 		script(type="text/javascript", src="js/app.js")
 		script(type="text/javascript", src="js/controllers.js")
 		script(type="text/javascript", src="js/directives.js")
