--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -15,10 +15,6 @@
   src: url(../fonts/karla-regular-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/karla-regular-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal; }
-html {
-  width: 100%;
-  height: 100%; }
-
 [ng-click],
 [data-ng-click],
 [x-ng-click] {
@@ -28,8 +24,6 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   vertical-align: baseline;
-  width: 100%;
-  height: 100%;
   -webkit-tap-highlight-color: transparent;
   background-color: white;
   -webkit-box-sizing: border-box;
@@ -63,11 +57,13 @@ body {
 
 .list-wrapper {
   position: relative;
-  margin-top: 50px;
-  margin: 50px 0 auto 10%;
+  display: block;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin-top: 0;
+  margin: 0 0 auto 10%;
   width: 90%;
-  overflow: hidden;
-  height: 100%; }
+  height: 800px; }
   .list-wrapper .rbma-radio-picks {
     font-size: 2em;
     border-bottom: 5px solid black;
@@ -215,7 +211,7 @@ body {
 
 .sidebar {
   position: absolute;
-  top: 40%;
+  top: 30%;
   left: 20px;
   width: 17.3333333333%; }
   .sidebar h4 {
