--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -6,8 +6,6 @@
 @import '_fonts.scss';
 
 html{
-	width: 100%;
-	height: 100%;
 }
 
 [ng-click],
@@ -20,8 +18,6 @@ body{
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	vertical-align: baseline;
-	width: 100%;
-	height: 100%;
 	-webkit-tap-highlight-color: transparent;
 	background-color: white;
 	@include vendorize(box-sizing, border-box);
@@ -29,6 +25,8 @@ body{
 	font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 16px;
 }
+
+
 
 .lists{
 	list-style-type: none;
@@ -59,11 +57,13 @@ body{
 
 .list-wrapper{
 	position: relative;
-	margin-top: 50px;
-	margin: 50px 0 auto 10%;
+	display: block;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	margin-top: 0;
+	margin: 0 0 auto 10%;
 	width: 90%;
-	overflow: hidden;
-	height: 100%;
+	height: 800px;
 	.rbma-radio-picks{
 		font-size: 2em;
 		border-bottom: 5px solid black;
@@ -218,7 +218,7 @@ body{
 
 .sidebar{
 		position: absolute;
-		top: 40%;
+		top: 30%;
 		left: 20px;
 		width: 17.3333333333%;
 		h4{
