--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,4 +1,5 @@
 
+<div class="hero"></div>
 <div id="top" class="list-wrapper">
   <div class="rbma-radio-picks"></div>
   <h1 class="author">{{list.fields.author}}</h1>
