--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -15,6 +15,9 @@
   src: url(../fonts/karla-regular-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/karla-regular-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal; }
+html {
+  min-height: 100%; }
+
 [ng-click],
 [data-ng-click],
 [x-ng-click] {
@@ -22,6 +25,9 @@
 
 body {
   margin: 0;
+  height: 100%;
+  min-width: 320px;
+  min-height: 100%;
   -webkit-font-smoothing: antialiased;
   vertical-align: baseline;
   -webkit-tap-highlight-color: transparent;
@@ -55,6 +61,15 @@ body {
             max-width: 100%;
             height: auto; }
 
+.hero {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0; }
+
 .list-wrapper {
   position: relative;
   display: block;
@@ -63,7 +78,11 @@ body {
   margin-top: 0;
   margin: 0 0 auto 10%;
   width: 90%;
-  height: 800px; }
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s; }
   .list-wrapper .rbma-radio-picks {
     font-size: 2em;
     border-bottom: 5px solid black;
