--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -6,6 +6,7 @@
 @import '_fonts.scss';
 
 html{
+	min-height: 100%;
 }
 
 [ng-click],
@@ -16,6 +17,9 @@ html{
 
 body{
 	margin: 0;
+	height: 100%;
+	min-width: 320px;
+	min-height: 100%;
 	-webkit-font-smoothing: antialiased;
 	vertical-align: baseline;
 	-webkit-tap-highlight-color: transparent;
@@ -55,6 +59,16 @@ body{
 	}
 }
 
+.hero{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: black;
+	opacity: 0;
+}
+
 .list-wrapper{
 	position: relative;
 	display: block;
@@ -63,7 +77,7 @@ body{
 	margin-top: 0;
 	margin: 0 0 auto 10%;
 	width: 90%;
-	height: 800px;
+	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
 		border-bottom: 5px solid black;
