--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -75,13 +75,14 @@ body{
 	overflow-x: hidden;
 	overflow-y: scroll;
 	margin-top: 0;
-	margin: 0 0 auto 10%;
-	width: 90%;
+	margin: 0 0 auto 0;
+	width: 100%;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
 		border-bottom: 5px solid black;
 		width: 100%;
+		margin-left: 10%;
 		&:after{
 			content: 'RBMA Radio Picks';
 		}
@@ -89,13 +90,14 @@ body{
 	.author{
 		font-size: 4em;
 		margin: 0;
+		margin-left: 10%;
 	}
 
 	.list-thumbs{
 		list-style-type: none;
 		padding: none;
 		padding-right: 100px;
-		margin-left: 5%;
+		margin-left: 15%;
 		text-align: center;
 		z-index: 1;
 		margin-top: 68px;
@@ -161,7 +163,7 @@ body{
 
 	.list-items{
 		width: 66.6666666666%;
-		margin-left: 15.33333333333%;
+		margin-left: 20%;
 		font-size: 1.7em;
 		line-height: 1.5;
 		list-style-type: none;
