--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -78,6 +78,7 @@ body {
   margin-top: 0;
   margin: 0 0 auto 0;
   width: 100%;
+  height: 100%;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -ms-transition: opacity 0.3s;
