--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -77,6 +77,7 @@ body{
 	margin-top: 0;
 	margin: 0 0 auto 0;
 	width: 100%;
+	height: 100%;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
