--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -61,6 +61,9 @@ body {
             max-width: 100%;
             height: auto; }
 
+.ng-scope {
+  height: 100%; }
+
 .hero {
   position: absolute;
   top: 0;
@@ -79,6 +82,7 @@ body {
   margin: 0 0 auto 0;
   width: 100%;
   height: 100%;
+  padding-top: 58px;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -ms-transition: opacity 0.3s;
