--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -59,6 +59,10 @@ body{
 	}
 }
 
+.ng-scope{
+	height: 100%;
+}
+
 .hero{
 	position: absolute;
 	top: 0;
@@ -78,6 +82,7 @@ body{
 	margin: 0 0 auto 0;
 	width: 100%;
 	height: 100%;
+	padding-top: 58px;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
