--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -71,7 +71,8 @@ body {
   width: 100%;
   height: 100%;
   background: black;
-  opacity: 0; }
+  opacity: 0;
+  min-height: 800px; }
 
 .list-wrapper {
   position: relative;
