--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -71,8 +71,7 @@ body {
   width: 100%;
   height: 100%;
   background: black;
-  opacity: 0;
-  min-height: 800px; }
+  opacity: 0; }
 
 .list-wrapper {
   position: relative;
