--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -64,15 +64,6 @@ body {
 .ng-scope {
   height: 100%; }
 
-.hero {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 0; }
-
 .list-wrapper {
   position: relative;
   display: block;
@@ -81,7 +72,7 @@ body {
   margin-top: 0;
   margin: 0 0 auto 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding-top: 58px;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
