--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -63,16 +63,7 @@ body{
 	height: 100%;
 }
 
-.hero{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: black;
-	opacity: 0;
-	// min-height: 800px;
-}
+
 
 .list-wrapper{
 	position: relative;
@@ -82,7 +73,7 @@ body{
 	margin-top: 0;
 	margin: 0 0 auto 0;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	padding-top: 58px;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
