--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html(lang="en", ng-app="listfeature")
 		link(rel="stylesheet", type="text/css", href="css/feature-beast.css")
 
 	body
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		div(ng-view)
 
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
