--- a/index.jade
+++ b/index.jade
@@ -5,7 +5,7 @@ html(lang="en", ng-app="listfeature")
 		title RBMA Radio Picks
 		link(rel="stylesheet", type="text/css", href="css/feature-beast.css")
 
-	body
+	body(class="frame-body")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		div(ng-view)
 
