--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -16,7 +16,9 @@
   font-weight: normal;
   font-style: normal; }
 html {
-  min-height: 100%; }
+  min-height: 100%;
+  font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 16px; }
 
 [ng-click],
 [data-ng-click],
@@ -29,17 +31,8 @@ body {
   min-width: 320px;
   min-height: 100%;
   -webkit-font-smoothing: antialiased;
-  vertical-align: baseline;
   -webkit-tap-highlight-color: transparent;
-  background-color: white;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 16px; }
+  -webkit-overflow-scrolling: touch; }
 
 .lists {
   list-style-type: none;
@@ -69,10 +62,7 @@ body {
   display: block;
   overflow-x: hidden;
   overflow-y: scroll;
-  margin-top: 0;
-  margin: 0 0 auto 0;
-  width: 100%;
-  min-height: 100%;
+  margin: 0;
   padding-top: 58px;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
