--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -7,6 +7,8 @@
 
 html{
 	min-height: 100%;
+	font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 16px;
 }
 
 [ng-click],
@@ -21,13 +23,8 @@ body{
 	min-width: 320px;
 	min-height: 100%;
 	-webkit-font-smoothing: antialiased;
-	vertical-align: baseline;
 	-webkit-tap-highlight-color: transparent;
-	background-color: white;
-	@include vendorize(box-sizing, border-box);
 	-webkit-overflow-scrolling: touch;
-	font-family: 'karla', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 16px;
 }
 
 
@@ -70,10 +67,7 @@ body{
 	display: block;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	margin-top: 0;
-	margin: 0 0 auto 0;
-	width: 100%;
-	min-height: 100%;
+	margin: 0;
 	padding-top: 58px;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
